--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,15 @@ django-filter==24.3
 django-versatileimagefield==3.1
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+exceptiongroup==1.2.2
+iniconfig==2.0.0
+packaging==24.1
 pillow==10.4.0
+pluggy==1.5.0
 PyJWT==2.9.0
+pytest==8.3.2
+pytest-django==4.8.0
 python-magic==0.4.27
 sqlparse==0.5.1
+tomli==2.0.1
 typing_extensions==4.12.2
